fix: minor misalignment
LAST COMMIT FOR TODAY

--- a/src/components/Home/Post.css
+++ b/src/components/Home/Post.css
@@ -112,7 +112,7 @@
 
 .deadline-text {
   position: absolute;
-  top: 20%;
+  top: 15%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: var(--sub-text-color);
